tests/baselines/reference/jsxViaImport.2.errors.txt
component.d.ts(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
component.d.ts(4,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== consumer.tsx (0 errors) ====
    /// <reference path="component.d.ts" />
    import BaseComponent from 'BaseComponent';
    class TestComponent extends React.Component<any, {}> {
        render() {
            return <BaseComponent />;
        }
    }
    
==== component.d.ts (2 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
      interface ElementAttributesProperty { props; }
    }
    declare module React {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
      class Component<T, U> { }
    }
    declare module "BaseComponent" {
        export default class extends React.Component<any, {}> {
        }
    }
    